[EDGDEMATIC-78,79] - Update to Java 17 and Spring boot v3.0.0 and identify issues. (#65)
* [EDGDEMATIC-78]Update to Java 17.

* [EDGDEMATIC-79]Update the module to Spring boot v3.0.0 and identify issues.

* [EDGDEMATIC-78,79] - Solved conflict

* [EDGDEMATIC-78,79] - resolved dependencies issue

* [EDGDEMATIC-78,79] - updated folio spring base to 6.0.0

---------

Co-authored-by: Azizbek <113523904+azizbekxm@users.noreply.github.com>