@@ -6,7 +6,6 @@ import java.util.HashMap;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import lombok.extern.log4j.Log4j2;
 import org.folio.ed.client.RemoteStorageClient;
@@ -19,7 +18,6 @@ import org.folio.ed.domain.request.ItemBarcodeRequest;
 import org.folio.ed.domain.dto.AsrItems;
 import org.folio.ed.domain.dto.AsrRequests;
 import org.springframework.http.ResponseEntity;
-import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
 import lombok.RequiredArgsConstructor;
@@ -76,7 +74,7 @@ public class RemoteStorageService {
     var asrItems = new AsrItems();
     asrItems.asrItems(getAccessionQueueRecords(remoteStorageConfigurationId, tenantId, okapiToken).stream()
       .map(accessionQueueRecordToAsrItemConverter::convert)
-      .collect(Collectors.toList()));
+      .toList());
     return asrItems;
   }
 
@@ -103,23 +101,20 @@ public class RemoteStorageService {
       .getResult()
       .stream()
       .map(retrievalQueueRecordToAsrRequestConverter::convert)
-      .collect(Collectors.toList()));
+      .toList());
     return asrRequests;
   }
 
-  @Async
   public ResponseEntity<String> setAccessionedAsync(String itemBarcode, String tenantId, String okapiToken) {
     log.debug("setAccessionedAsync :: itemBarcode:{} tenantId:{}",itemBarcode,tenantId);
     return remoteStorageClient.setAccessionedByBarcode(itemBarcode, tenantId, okapiToken);
   }
 
-  @Async
   public ResponseEntity<String> setRetrievedAsync(String itemBarcode, String tenantId, String okapiToken) {
     log.debug("setRetrievedAsync :: itemBarcode:{} tenantId:{}",itemBarcode,tenantId);
     return remoteStorageClient.setRetrievalByBarcode(itemBarcode, tenantId, okapiToken);
   }
 
-  @Async
   public ResponseEntity<String> markItemAsMissingAsync(String itemBarcode, String tenantId, String okapiToken) {
     log.debug("markItemAsMissingAsync :: itemBarcode:{} tenantId:{}",itemBarcode,tenantId);
     return remoteStorageClient.markItemAsMissing(itemBarcode, tenantId, okapiToken);
